--- a/tv-details.html
+++ b/tv-details.html
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
     <script src="js/script.js" defer></script>
-    <title>Flixx | Show Details</title>
+    <title>MovieFlixx | Show Details</title>
   </head>
   <body>
     <header class="main-header">
       <div class="container">
-        <div class="logo"><a href="/">FLIXX</a></div>
+        <div class="logo"><a href="/">MOVIEFLIXX</a></div>
         <nav>
           <ul>
             <li>
@@ -47,7 +47,7 @@
     <!-- Footer -->
     <footer class="main-footer">
       <div class="container">
-        <div class="logo"><span>FLIXX</span></div>
+        <div class="logo"><span>MOVIEFLIXX</span></div>
         <div class="social-links">
           <a href="https://www.facebook.com" target="_blank"
             ><i class="fab fa-facebook-f"></i
